--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,15 +1,23 @@
 ---
 import Breadcrumbs from '@components/Breadcrumbs.astro'
+import Navaigation from '@components/Navaigation.astro'
 const { title } = Astro.props
 ---
 
 <header class='header'>
-  <Breadcrumbs title={title} />
-  <!-- <nav class='header__nav'>
-    <a class='header__nav-item' href='/' class='logo'>Astro</a>
-    <a class='header__nav-item' href='/blog' class='nav-link'>Blog</a>
-    <a href='/github' class='nav-link'>GitHub</a>
-  </nav> -->
+  <div class='header__container container'>
+    <Breadcrumbs title={title} />
+    <Navaigation />
+  </div>
 </header>
 
-<style></style>
+<style>
+  .header {
+  }
+
+  .header__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+</style>
