--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -6,6 +6,9 @@ interface Props {
 const { title } = Astro.props
 
 import Header from '@components/Header.astro'
+
+import '@styles/reset.css'
+import '@styles/typography.css'
 ---
 
 <!doctype html>
@@ -16,6 +19,12 @@ import Header from '@components/Header.astro'
     <meta name='viewport' content='width=device-width' />
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
     <meta name='generator' content={Astro.generator} />
+    <link rel='preconnect' href='https://fonts.googleapis.com' />
+    <link rel='preconnect' href='https://fonts.gstatic.com' crossorigin />
+    <link
+      href='https://fonts.googleapis.com/css2?family=Fira+Code:wght@300..700&display=swap'
+      rel='stylesheet'
+    />
     <title>{title}</title>
   </head>
   <body>
@@ -23,16 +32,11 @@ import Header from '@components/Header.astro'
     <slot />
   </body>
 </html>
+
 <style is:global>
-  :root {
-    --accent: 136, 58, 234;
-    --accent-light: 224, 204, 250;
-    --accent-dark: 49, 10, 101;
-    --accent-gradient: linear-gradient(
-      45deg,
-      rgb(var(--accent)),
-      rgb(var(--accent-light)) 30%,
-      white 60%
-    );
+  .container {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 1rem;
   }
 </style>
